# gui_agent

./: .gitignore  ARCHITECTURE.md  QUICKSTART.md  README.md  __init__.py  agent.py  browser.py  diagnose_doubao.py  example.py  example_doubao.py  llm.py  pyproject.toml  run_web.py  test_api.py  test_doubao_api.py  test_llm_comparison.py  tools.py  web_server.py
static/: index.html
